# antigoogle

./: .env.example  .gitignore  Dockerfile  README.md  dev.sh  docker-compose.yml  entrypoint.sh  nginx.conf  relay_config.toml  requirements.txt  train_binary_experts.py
app/: __init__.py  api.py  blocklists.py  complexity.py  config.py  crawler.py  database.py  discovery.py  embedder.py  experts.py  filters.py  init_data.py  nostr.py  ratings.py  search.py  setup.py  spellcheck.py  swarm.py  templates.py  topology.py  train_binary_experts.py  trust.py  vrf.py
wasm/: Cargo.toml  README.md  antigoogle_client.js  antigoogle_inline.js  build.sh  generate_planes.py
wasm/pkg/: antigoogle_wasm.d.ts  antigoogle_wasm.js  antigoogle_wasm_bg.wasm  antigoogle_wasm_bg.wasm.d.ts  package.json
wasm/src/: l1_planes.rs  l2_planes.rs  lib.rs
