[package]
name = "antigoogle-wasm"
version = "0.1.0"
edition = "2021"
description = "Fast client-side vector operations for AntiGoogle"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.92"

# Better panic messages in debug
console_error_panic_hook = { version = "0.1.7", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.37"

[profile.release]
# Optimize for size (important for WASM)
wasm-opt = false
#opt-level = "s"
#lto = true
#codegen-units = 1
#panic = "abort"

# Strip debug info
#strip = true

